webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      # 外部访问端口
      port: 11308
      targetPort: 3306
  type: LoadBalancer
