webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - name: http
      protocol: TCP
      # 物理机的端口
      port: 88
      # 容器里的端口
      targetPort: 8080
